2009-04-20  Chris Toshok  <toshok@ximian.com>

	* timeline.cpp: fix up DispatcherTimers after I broke them by
	removing the clock event.

2009-04-19  Chris Toshok  <toshok@ximian.com>

	* eventargs.h|.cpp: add RenderingEventArgs type.

	* timemanager.cpp (TimeManager::SourceTick): the render event
	takes a RenderEventArgs, even though the type of the event is
	EventHandler.  Goes a long way toward fixing DRT #394 and fixes
	DRT #905.

	* type.h, type-generated.cpp, value.h, cbinding.h, cbinding.cpp:
	regen.
	
2009-04-19  Chris Toshok  <toshok@ximian.com>

	* shape.cpp|.h (Shape::CreateDefaultStretch): create the proper
	default for the various shapes (Fill if a rectangle or ellipse,
	None for all other types).  Fixes part of DRT #508.
	(Rectangle::Rectangle): don't set the default value as a local
	value.
	(Ellipse::Ellipse): same.

2009-04-19  Jeffrey Stedfast  <fejj@novell.com>

	* textblock.cpp (DefaultFontSize): New function to get the default
	font size for a TextBlock (or Inline) based on the Silverlight
	context (XAP vs XAML).

2009-04-19  Chris Toshok  <toshok@ximian.com>

	* provider.cpp (InheritedPropertyValueProvider::GetPropertyValue):
	inlines inherit their Language from the textblock, and textblocks
	inherit it from frameworkelements.  part of fix for drt #952.

2009-04-18  Chris Toshok  <toshok@ximian.com>

	* clock.h|.cpp: move to the holy grail of a functional clock
	setup.  this removes Clock::Tick and related additive machinery
	that introduces errors into various calculations.  instead we use
	the fact that a child's time can be expressed as a function of its
	parent's time.  more calculation per-frame, perhaps, but less
	problems wrt inflection points like autoreverse/repeat points.
	This removes *tons* of difficult to read and impossible to
	understand code, and brings clocks and clockgroups a lot closer.
	Docs coming soon to a source file near you.

	* timeline.h|.cpp: various clock-related changes.  2 notables are